fix 68: extend fuzz test to more models (#153)
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>